--- a/style1.css
+++ b/style1.css
@@ -101,9 +101,9 @@ html {
 
 
 #clipCard{
-	background-color: #787878;
-  	background-size: cover;
-	padding: 3%;
+	/* background-color: #787878; */
+  	/* background-size: cover; */
+	/* padding: 3%; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -119,7 +119,7 @@ html {
 	position: relative;
 	width: 280px;
 	height: 400px;
-	margin: 20px 0;
+	margin-top: -3%;
 	box-sizing: border-box;
 	overflow: hidden;
 }
