--- a/style2.css
+++ b/style2.css
@@ -78,16 +78,14 @@
 #disInfo{
     float: right;
     position: relative;
-    top: 50%;
-    right: -40%;
-    color: white;
-    font-size: 30px;
+    margin-top: 8%;
+    right: -50%;
+    color: #ff7d26;
+    font-size: 35px;
 }
 .discription{
     height: 50vh;
-    background-color: #707070;
     position: relative;
-
 }
 .paperPlane{
     height: 100PX;
@@ -100,4 +98,14 @@
     position: absolute;
     top: 70%;
     left: 0%;
+}
+
+
+
+#page2{
+    background-image: url("images/background2.jpeg");
+    width: 100%;
+    height: 110vh;
+    background-size: 100% 100%;
+    position: relative;
 }
