--- a/styleNew.css
+++ b/styleNew.css
@@ -6,7 +6,7 @@
 
 #firstPage {
   background: linear-gradient(to left, #ff874f, #ffbd80);
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -101,7 +101,7 @@
   width: 350px;
   position: absolute;
   bottom: 0;
-  right: 0;
+  right: -50px;
 }
 
 #fpageLogo,
