--- a/styleNew.css
+++ b/styleNew.css
@@ -68,7 +68,6 @@
   border-radius: 20px;
   text-align: center;
   padding: 20px;
-  margin: 10px;
   border: 2px solid white;
 }
 .logo {
@@ -76,6 +75,7 @@
   height: 100px;
   margin: 10px;
 }
+
 #pageDiscription {
   font-size: 25px;
   margin: 10px;
@@ -104,6 +104,7 @@
   right: -50px;
 }
 
+/* initial css for homepage on loading */
 #fpageLogo,
 #fpageDisc,
 #fpageButton,
