--- a/styleSheet/styleMain.css
+++ b/styleSheet/styleMain.css
@@ -9,7 +9,7 @@
 }
 
 #cardBox {
-  background: linear-gradient(to right, #ffd2bd, #ffbd80);
+  background: #ffbd80;
   border-radius: 20px;
   text-align: center;
   padding: 20px;
